# auto-kanban

./: .gitignore  AGENTS.md  CODE-OF-CONDUCT.md  Cargo.toml  README.md  local-build.sh  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml
.github/actions/cargo-checks-common-setup/: action.yml
.github/workflows/: pre-release.yml  publish.yml  remote-deploy-dev.yml  remote-deploy-prod.yml  remote-release.yml  test.yml
assets/scripts/: toast-notification.ps1
crates/api-types/: Cargo.toml
crates/api-types/src/: issue.rs  issue_assignee.rs  issue_comment.rs  issue_comment_reaction.rs  issue_follower.rs  issue_relationship.rs  issue_tag.rs  lib.rs  migration.rs  notification.rs  organization_member.rs  organizations.rs  project.rs  project_status.rs  pull_request.rs  pull_requests_local.rs  tag.rs  user.rs  workspace.rs  workspaces.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-04e5a05c7cad438d39c4c8590410889ab1eefa7376d474a10c119d3f4d9143c7.json  query-0a805c219c9028b2677bd94ccabd47916e60d26c1cede27e467f0ae91f6639ab.json  query-0ac0d0f3826330836e3fd1bf57c42777eb489ac41a650f9361e6b563fc69bf35.json  (+29 more)
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/executors/: Cargo.toml  default_mcp.json  default_profiles.json
crates/git/: Cargo.toml
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: command.rs  container.rs  lib.rs  pty.rs
crates/remote/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/review/: Cargo.toml
crates/server/: Cargo.toml  build.rs
crates/services/: Cargo.toml
crates/utils/: Cargo.toml
dev_assets_seed/: db.sqlite
docs/: docs.json  getting-started.mdx  index.mdx  supported-coding-agents.mdx  troubleshooting.mdx
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/cloud/: authentication.mdx  getting-started.mdx  index.mdx  issues.mdx  kanban-board.mdx  list-view.mdx  migration.mdx  organizations.mdx  projects.mdx  team-members.mdx  troubleshooting.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx  keyboard-shortcuts.mdx
docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  subtasks.mdx  testing-your-application.mdx
docs/integrations/: auto-kanban-mcp-server.mdx  azure-repos-integration.mdx  github-integration.mdx  mcp-server-configuration.mdx  vscode-extension.mdx
docs/settings-beta/: agent-configurations.mdx  creating-task-tags.mdx  general.mdx  index.mdx  mcp-servers.mdx  organization-settings.mdx  projects-repositories.mdx  remote-projects.mdx
docs/workspaces/: changes.mdx  command-bar.mdx  creating-workspaces.mdx  git-operations.mdx  index.mdx  interface.mdx  managing-workspaces.mdx  preview.mdx  repositories.mdx  sessions.mdx  slash-commands.mdx
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.new.config.js  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  main.tsx
npx-cli/: README.md  package.json
remote-frontend/: index.html  package.json
remote-frontend/src/: App.tsx  AppRouter.tsx  api.ts  index.css  main.tsx
shared/: remote-types.ts  types.ts
shared/schemas/: amp.json  claude_code.json  codex.json  copilot.json  cursor_agent.json  droid.json  gemini.json  opencode.json  qwen_code.json
(+485 files in other folders)
